# monge

./: CMakeLists.txt  README.md
app/: barycenters.cpp  monge.cpp  stippling.cpp
app/common/: analytical_functions.cpp  analytical_functions.h  generic_tasks.cpp  generic_tasks.h  image_utils.cpp  image_utils.h  inputparser.cpp  inputparser.h  otsolver_options.h
monge/: otsolver_2dgrid.cpp  otsolver_2dgrid.h  transport_map.cpp  transport_map.h
monge/details/: line_search.cpp  line_search.h  nested_dissection.cpp  nested_dissection.h
monge/utils/: bvh2d.cpp  bvh2d.h  eigen_addons.h  mesh_utils.cpp  mesh_utils.h  rasterizer.cpp  rasterizer.h  stochastic_rasterizer.cpp  stochastic_rasterizer.h
